@@ -1,3 +1,8 @@
+2018-10-23  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/87693
+	* gcc.dg/torture/pr87693.c: New testcase.
+
 2018-10-23  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/85603
