@@ -1,3 +1,9 @@
+2018-10-23  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/87693
+	* tree-ssa-threadedge.c (thread_around_empty_blocks): Handle
+	the case we do not find the taken edge.
+
 2018-10-22  Paul Koning  <ni1d@arrl.net>
 
 	* symtab.c (symtab_node::increase_alignment): Correct max
